style.css
/*CSS reset*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    /*Variables*/
    /*Colors*/
    --green: #ccd5ae;
    --brown: #d4a373;
    --light-green: #e9edc9;
    --light-brown: #faedcd;
    --light-beige: #fefae0;

    --shadow: #222a;
    /*box-shadow presets*/
    --tiny-shadow: 4px 4px 4px var(--shadow);
    --big-shadow: 8px 8px 8px var(--shadow);

    /*main default sizes*/
    --pad: 2em;
    --marg: 2em;
    --gap: 3em;
 }

/*Fonts*/
h1, h2, h3, h4, .nav-btn, .submit-btn, label:has(+input, +textarea){
/*lugrasimo-regular*/
    font-family: "Lugrasimo", cursive;
    font-weight: 400;
    font-style: normal;
}

/*force lineshift after label headers*/
label:has(+input, +textarea) {
    display: block;
}

body {
    /*lexend-regular */
    font-family: "Lexend", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

/*Tags*/
body {
    background-color: var(--light-beige);
}

header {
    display: flex;
    min-width: fit-content;
    margin: var(--marg);
    flex-direction: column;
    border-radius: 4em 4em 0 0;
    background-color: var(--brown);
    box-shadow: var(--big-shadow);
    padding: var(--pad);
    align-items: center;
    justify-content: space-around;
    gap: 1em;
    nav {
	display: flex;
	flex-wrap: wrap;
	width: fit-content;
	gap: 1em; 
    }
}

img {
    width: 100%;/*fixed wrong size on header art*/
}

main {
    display: flex;
    flex-direction: column;
    gap: var(--gap);
    background-color: var(--light-brown);
    margin: var(--marg);
    padding: var(--pad);
}


input {
    margin-bottom: 1.5em;
}

/*classes*/

.header-top {
    border-radius: 2em 2em 0 0;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: space-between;
    text-align: center;
    h1  {
	text-size: 4em;
	width: 8em; /*gets h1 in one line*/
	text-shadow: 4px 4px 2px #4445; /*original values didn't match figma*/
    }
}

.nav-btn {
    display: flex;
    min-width: fit-content;
    align-items: center;
    font-size: 20px; 
    white-space: nowrap;
    text-decoration: none;
    color: black;
    gap: 0.5em;
    background-color: var(--green);
    box-shadow: var(--tiny-shadow); 
    padding: 0.1em 1em;
    border-radius: 1em 1em 0 0;
}

.btn-clicked {
    border: 8px solid var(--light-brown);
    border-bottom-width: 0;
}

.submit-btn {
    display: flex;
    min-width: fit-content;
    align-items: center;
    font-size: 20px; 
    white-space: nowrap;
    text-decoration: none;
    color: black;
    gap: 0.5em;
    background-color: var(--brown);
    box-shadow: var(--tiny-shadow); 
    padding: 0.5em 1.5em;
    border-radius: 1em;
}

.card {
    background-color: var(--light-green);
    display: flex;
    justify-content: space-around;
    border-radius: 0.5em;
    box-shadow: var(--tiny-shadow);
    align-items: start;
    padding: var(--pad);
    gap: var(--gap);
    img {
	width: 45%;
	object-fit: cover;
	aspect-ratio: 1;
    }
}

.row-reverse {
    flex-direction: row-reverse;
}

.field {
    background-color: var(--light-beige);
}

.booking {
    background-color: var(--light-green);
    border-radius: 0.5em;
    box-shadow: var(--tiny-shadow);
    padding: var(--pad);
    /*max-width: 47%;*/
    /*max-width: 50%;*/
    min-width: 400px;
    input, textarea {
	background-color: var(--light-beige);
    }
}

.double-columns {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.img-card {
    background-color: var(--light-green);
    display: flex;
    flex-direction: column;
    border-radius: 0.5em;
    box-shadow: var(--tiny-shadow);
    align-items: center;
    padding: var(--pad);
    width: 45%;
    min-height: 30vh;
    img {
	max-height: 100%;
	object-fit: cover;
	aspect-ratio: 1;
    }
    overflow: hidden;
}

.comment {
    display: flex;
    flex-direction: column;
    box-shadow: var(--tiny-shadow);
    background-color: var(--light-beige);
    border-radius: 0.5em;
    padding: var(--pad);
    gap: 1em;
    div {
	display: flex;
	gap: 1em;
    }
    img {
	width: 9em;
	object-fit: cover;
	aspect-ratio: 1;
    }
}

/*id's*/
#gallery {
    flex-direction: row;
    flex-wrap: wrap;
}

#feedback {
    align-items: center;
}

